--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.28.13",
+    "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "tailwind-variants": "^0.2.1",
     "vue": "^3.4.21",
@@ -39,6 +42,8 @@
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.6",
     "vite-plugin-pages": "^0.32.0",
     "vite-plugin-vue-devtools": "^7.0.18",
